<resources>
    <string name="app_name">PlsPray</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">Loading...</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="enter">Enter</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="title_activity_profile_pic">ProfilePicActivity</string>
    <string name="camera">Camera</string>
    <string name="gallary">Gallary</string>
    <string name="change_profile_pic">Change Profile picture</string>
    <string name="profile">Profile</string>
    <string name="title_activity_set_reminder">SetReminderActivity</string>
    <string name="title_activity_send_schedule">SendScheduleActivity</string>
    <string name="title_activity_add_time">AddTimeActivity</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="send">Send</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="group_name">Group Name</string>
    <string name="msg">Please enable all permission</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Name</string>
    <string name="enter_firstname">First Name</string>
    <string name="enter_lastname">Last Name</string>
</resources>
