<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="10dp"
    android:weightSum="2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="plspray.infoservices.lue.plspray.LoginActivity"
    tools:showIn="@layout/activity_login">



       <LinearLayout
           android:id="@+id/logolayout"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="vertical"
           android:weightSum="3"

           >

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="0dp"
               android:layout_weight="2"
               android:layout_marginLeft="0dp"
               android:src="@drawable/praying_hands"
               />

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:orientation="vertical"
               >

               <TextView
                   android:id="@+id/textView"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="20dp"
                   android:layout_centerVertical="true"
                   android:gravity="center_horizontal"
                   android:textSize="30sp"
                   android:textColor="@color/green"
                   android:text="@string/app_name" />


           </RelativeLayout>

       </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernamefirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/dark_green"
            android:layout_gravity="center_vertical"

            >

            <EditText
                android:id="@+id/usernamefirst_edttxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_firstname"
                android:background="@color/dark_green"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/input_text_size"
                android:textColorHint="@color/light_grey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernamelast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/dark_green"
            android:layout_gravity="center_vertical"

            >

            <EditText
                android:id="@+id/usernamelast_edttxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_lastname"
                android:background="@color/dark_green"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/input_text_size"
                android:textColorHint="@color/light_grey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobileNoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"

            >

            <EditText
                android:id="@+id/mobilenodEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mobile_number"
                android:maxLength="10"
                android:padding="10dp"
                android:background="@color/dark_green"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="@dimen/input_text_size"
                android:textColorHint="@color/light_grey" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="265dip"
                android:layout_height="40dip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_rect"
                android:text="Login"
                android:gravity="center"
                android:textColor="@color/green"
                android:textStyle="bold" />


        </RelativeLayout>




    </LinearLayout>



</LinearLayout>
</ScrollView>