<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/light_black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="plspray.infoservices.lue.plspray.AddTimeActivity"
    tools:showIn="@layout/activity_add_time">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"
                    android:text="@string/day"
                    android:textColor="@color/green"

                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    android:text="@string/time"
                    android:textColor="@color/green"
                    />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/green"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
             android:padding="10dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"

                    android:textStyle="bold"
                    android:text="@string/monday"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    >

                    <TextView
                        android:id="@+id/mondayTimeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/mondayTimeBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/add_alarm"
                            />
                    </FrameLayout>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/tuesday"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    >

                    <TextView
                        android:id="@+id/tuesdayTimeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/tuesdayTimeBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/add_alarm"
                            />
                    </FrameLayout>


                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/wednesday"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    >

                    <TextView
                        android:id="@+id/wednesdayTimeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/wednesdayTimeBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/add_alarm"
                            />
                    </FrameLayout>


                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/thursday"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    >

                    <TextView
                        android:id="@+id/thursdayTimeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/thursdayTimeBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/add_alarm"
                            />
                    </FrameLayout>


                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/friday"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    >

                    <TextView
                        android:id="@+id/fridayTimeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/fridayTimeBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/add_alarm"
                            />
                    </FrameLayout>


                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/saturday"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    >

                    <TextView
                        android:id="@+id/saturdayTimeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/saturdayTimeBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/add_alarm"
                            />
                    </FrameLayout>


                </LinearLayout>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/sunday"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    >

                    <TextView
                        android:id="@+id/sundayTimeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/sundayTimeBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/add_alarm"
                            />
                    </FrameLayout>


                </LinearLayout>



            </LinearLayout>


            <Button
                android:id="@+id/sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_rect_green"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
